<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/paypal_category_inoformation">

        <PreferenceScreen
            android:key="@string/paypal_key_info"
            android:summary="@string/paypal_info_sum"
            android:title="@string/paypal_info" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/paypal_category_paypal">

        <PreferenceScreen
            android:summary="@string/paypal_mail_mo"
            android:title="@string/paypal_receiver" />

        <EditTextPreference
            android:dialogTitle="@string/paypal_sender_dialog"
            android:key="@string/paypal_key_sender"
            android:title="@string/paypal_sender" />

        <EditTextPreference
            android:dialogTitle="@string/paypal_value_dialog"
            android:key="@string/paypal_key_value"
            android:numeric="decimal"
            android:title="@string/paypal_value" />

        <PreferenceScreen
            android:key="@string/paypal_key_send"
            android:summary="@string/paypal_send_sum"
            android:title="@string/paypal_send" />


    </PreferenceCategory>


</PreferenceScreen>