<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="?android:attr/selectableItemBackground"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:minHeight="48dp">

    <ImageView
        android:id="@id/modImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/empty"
        android:scaleType="centerCrop"
        android:src="@drawable/image_bg" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_toRightOf="@id/modImage">

        <TextView
            android:id="@id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/txtArtist"
            android:layout_alignParentRight="true"
            android:singleLine="true"
            android:text="@string/date"
            android:textIsSelectable="false" />

        <TextView
            android:id="@id/txtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/txtTitle"
            android:layout_alignRight="@id/txtDate"
            android:layout_below="@id/txtDate"
            android:singleLine="true"
            android:text="@string/time"
            android:textIsSelectable="false" />

        <TextView
            android:id="@id/txtArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/txtDate"
            android:singleLine="true"
            android:text="@string/artistDummy"
            android:textIsSelectable="false" />

        <TextView
            android:id="@id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/txtArtist"
            android:layout_below="@id/txtArtist"
            android:layout_toLeftOf="@id/txtTime"
            android:singleLine="true"
            android:text="@string/titleDummy"
            android:textColor="@android:color/white"
            android:textIsSelectable="false"
            android:textStyle="bold"
            android:typeface="sans" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/listSizer"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        tools:ignore="ContentDescription" />

</RelativeLayout>