<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="?android:attr/selectableItemBackground"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:minHeight="48dp">

    <ProgressBar
        android:id="@+id/progress"
        style="@style/Widget.ProgressBar.Vertical"
        android:layout_width="4dip"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:max="100"
        android:minHeight="48dp"
        android:progress="100" />

    <ImageView
        android:id="@id/modImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/empty"
        android:scaleType="centerCrop"
        android:src="@drawable/image_bg"
        android:layout_centerVertical="true" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/modImage"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerVertical="true">

        <TextView
            android:id="@id/txtMod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/txtTitle"
            android:layout_alignParentRight="true"
            android:singleLine="true"
            android:text="@string/moderator"
            android:textIsSelectable="false" />

        <TextView
            android:id="@id/txtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/txtGenre"
            android:layout_alignRight="@id/txtMod"
            android:layout_below="@id/txtMod"
            android:singleLine="true"
            android:text="@string/time"
            android:textIsSelectable="false" />

        <TextView
            android:id="@id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/txtMod"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:singleLine="true"
            android:text="@string/titleDummy"
            android:textIsSelectable="false" />

        <TextView
            android:id="@id/txtGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/txtTitle"
            android:layout_below="@id/txtTitle"
            android:layout_toLeftOf="@id/txtTime"
            android:singleLine="true"
            android:text="@string/genreDummy"
            android:textIsSelectable="false" />

    </RelativeLayout>

</RelativeLayout>